fix text on mobile

--- a/src/style/components/_descr-block.scss
+++ b/src/style/components/_descr-block.scss
@@ -36,6 +36,7 @@
   }
   .descr-block__text {
     padding: 0;
+    margin: 0;
     p {
       text-align: center;
     }
